# MyVkSample

./: .gitattributes  .gitignore  CMakeLists.txt  MyVkSample.kdev4  README.md
.kdev4/: MyVkSample.kdev4
MeshConvert/: CMakeLists.txt
MeshConvert/src/: MeshConvert.cpp  MeshConvert.h  main.cpp
assets/assets/meshes/Exterior/: exterior.vk_sample  exterior.vk_sample.drawdata
shaders/shaders/: BufferDeclarations.h  Grid.frag  Grid.vert  GridCalculations.h  GridParameters.h  ImGui.frag  ImGui.vert  ImGuiDescIndex.frag  Lines.frag  Lines.vert  VK02.frag  VK02.geom  VK02.vert  VK02_texture_array.frag  VK02_texture_array.vert  VK05.frag  VK05.vert  VKCube.frag  VKCube.vert
shared_utils/: CMakeLists.txt
shared_utils/src/: Bitmap.h  Utils.h  VkShader.cpp  VkShader.h  VkUtils.cpp  VkUtils.h  VtxData.cpp  VtxData.h
shared_utils/src/vk_exts/: vk_functions.cpp  vk_functions.inl
src/: Camera.h  LinearGraph.h  MeshConvert.cpp  MeshConvert.h  ProfilerWrapper.h  UtilsCubemap.cpp  UtilsCubemap.h  UtilsFPS.h  UtilsMath.h  VKShader.cpp  VKShader.h  VKUtils.cpp  VkState.cpp  VkState.h  VtxData.h  VulkanCanvas.cpp  VulkanCanvas.h  VulkanClear.cpp  VulkanClear.h  VulkanCubeRenderer.cpp  VulkanCubeRenderer.h  VulkanFinish.cpp  VulkanFinish.h  VulkanImGui.cpp  VulkanImGui.h  VulkanModelRenderer.cpp  VulkanModelRenderer.h  VulkanMultiMeshRenderer.cpp  VulkanMultiMeshRenderer.h  VulkanQuadRenderer.cpp  VulkanQuadRenderer.h  VulkanRendererBase.cpp  VulkanRendererBase.h  main.cpp
src/vk_exts/: vk_exts.h  vk_functions.h
